fix: add style and change stories for scrollbar

--- a/src/components/Scrollbar/Scrollbar.scss
+++ b/src/components/Scrollbar/Scrollbar.scss
@@ -23,5 +23,6 @@
     .thumb-horizontal {
         background-color: var(--color-grey-200);
         border-radius: 8px;
+        cursor: pointer;
     }
 }
